--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -1,7 +1,7 @@
 on: # 触发条件
   # 每当 push 到 master 分支时触发部署
   push:
-    branches: [master]
+    branches: [main]
   # 是否手动触发部署
   workflow_dispatch:
 
@@ -47,7 +47,7 @@ on: # 触发条件
         uses: crazy-max/ghaction-github-pages@v2
         # 环境变量
         env:
-          GITHUB_TOKEN: ${{ secrets.ACTION_SECRET }}
+          ACCESS_TOKEN: ${{ secrets.MY_SECRETS_NAME }}
         with:
           # 部署到 gh-pages 分支
           target_branch: gh-pages
