--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -47,7 +47,7 @@ on: # 触发条件
         uses: crazy-max/ghaction-github-pages@v2
         # 环境变量
         env:
-          ACCESS_TOKEN: ${{ secrets.MY_SECRETS_NAME }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
           # 部署到 gh-pages 分支
           target_branch: gh-pages
