--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -39,7 +39,7 @@ on: # 触发条件
 
       # 运行构建脚本
       - name: Build VuePress site
-        run: yarn docs:build
+        run: yarn run dev
 
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
